--- a/src/humangov-california.yaml
+++ b/src/humangov-california.yaml
@@ -15,7 +15,7 @@ spec:
       serviceAccountName: humangov-pod-execution-role
       containers:
       - name: humangov-python-app-california
-        image: public.ecr.aws/j7k5c5t5/humangov:latest
+        image: CONTAINER_IMAGE
         env:
         - name: AWS_BUCKET
           value: "humangov-california-s3-ctj3"
