--- a/src/humangov-florida.yaml
+++ b/src/humangov-florida.yaml
@@ -15,7 +15,7 @@ spec:
       serviceAccountName: humangov-pod-execution-role
       containers:
       - name: humangov-python-app-florida
-        image: public.ecr.aws/j7k5c5t5/humangov:latest
+        image: CONTAINER_IMAGE
         env:
         - name: AWS_BUCKET
           value: "humangov-florida-s3-2xuw"
