--- a/src/humangov-ingress-all.yaml
+++ b/src/humangov-ingress-all.yaml
@@ -34,3 +34,13 @@ spec:
               name: humangov-nginx-service-florida
               port:
                 number: 80
+    - host: staging.humangovmot.click
+      http:
+        paths:
+        - path: /
+          pathType: Prefix
+          backend:
+            service:
+              name: humangov-nginx-service-staging
+              port:
+                number: 80
